--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,9 +12,12 @@
         android:id="@+id/edt_value"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="70dp"
+        android:layout_marginBottom="15dp"
         android:hint="@string/enter_text"
         android:importantForAutofill="no"
-        android:inputType="text" />
+        android:inputType="text"
+        android:minHeight="48dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,24 +26,27 @@
         android:orientation="horizontal">
 
         <Button
-            android:layout_weight="1"
             android:id="@+id/generate_barcode"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/generate"/>
-
-        <Button
+            android:layout_marginStart="100dp"
+            android:layout_marginLeft="100dp"
+            android:layout_marginTop="25dp"
+            android:layout_marginEnd="100dp"
+            android:layout_marginRight="100dp"
             android:layout_weight="1"
-            android:id="@+id/save_barcode"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/save"/>
+            android:background="#07EFB5"
+            android:text="@string/generate"
+            android:textColor="#171616" />
+
     </LinearLayout>
 
     <ImageView
         android:id="@+id/qr_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="196dp"
+        android:layout_height="179dp"
+        android:layout_marginTop="50dp"
         android:contentDescription="@string/app_name" />
 
 </LinearLayout>
